# aether-media

./: .gitignore  LICENSE  README-TR.md  README.md  diff_output.txt  diff_output2.txt  index.html  mapping.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/modules/: ffmpeg.rs  ffprobe.rs  imagemagick.rs  mod.rs  naming.rs  thumbnail.rs
src/components/file-table/: DropZone.tsx  FileRow.tsx  FileRowSkeleton.tsx  FileTable.tsx  index.ts
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/settings/: FormatSelector.tsx  NamingConfig.tsx  PresetSelector.tsx  QualityConfig.tsx  ResizeConfig.tsx  SettingsPanel.tsx  index.ts
src/components/ui/: AboutModal.tsx  CompletedRetryDialog.tsx  ImagePreviewModal.tsx  LazyThumbnail.tsx  RetryModal.tsx  SessionRestoreDialog.tsx  ToastContainer.tsx  ToggleSwitch.tsx  UploadOverlay.tsx
src/hooks/: index.ts  useClickOutside.ts  useConversionQueue.ts  useThumbnail.ts
src/lib/: animations.ts  constants.ts  overrideUtils.ts  utils.ts
src/store/: appSettingsStore.ts  queueStore.ts  settingsStore.ts  toastStore.ts  uploadStore.ts
src/types/: index.ts
