[package]
name = "aether-media"
version = "1.0.1"
description = "A powerful desktop media converter built with Tauri, supporting video, image and audio format conversions with batch processing."
authors = ["Kintaro"]
license = "GPL-3.0"
repository = "https://github.com/xkintaro/aether-media"
edition = "2021"

[lib]
name = "aether_media_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
regex = "1"
tokio = { version = "1", features = ["sync", "process", "io-util", "rt-multi-thread"] }
futures = "0.3"
chrono = "0.4"
rand = "0.9"
tauri-plugin-single-instance = "2"
